<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">KiiChat</string>
	<string name="image_blank"></string>
	<string name="empty_result">Result is Empty</string>
	<string name="action_settings">Settings</string>
	<string name="tab_text_friends">Friends</string>
	<string name="tab_text_chat">Chat</string>
	<string name="text_new_account"><u>Create new account</u></string>
	<string name="label_username">Username</string>
	<string name="label_email">Email Address</string>
	<string name="label_password">Password</string>    
	<string name="label_choose_stamp">Choose a stamp</string>
	<string name="hint_username">Your name</string>
	<string name="hint_email">someone@example.com</string>
	<string name="hint_password">4&#8211;50 characters</string>
	<string name="hint_search_user">Email or Username</string>
	<string name="button_email">Sign In with your email</string>
	<string name="button_facebook">Sign In with Facebook</string>
	<string name="button_signin">Sign In</string>
	<string name="button_signup">Sign Up</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_add">Add</string>
	<string name="button_chat">Chat</string>
	<string name="button_send">Send</string>
	<string name="check_remember">Remember Me</string>
	<string name="menu_new_chat">New Chat</string>
	<string name="menu_signout">Sign Out</string>
	<string name="menu_add_friend">Add Friend</string>
	<string name="menu_search_user">Search User</string>
	<string name="menu_reload">Reload</string>
</resources>
